@@ -1,5 +1,9 @@
 2017-07-05  Bin Cheng  <bin.cheng@arm.com>
 
+	* gcc.dg/tree-ssa/ldist-26.c: New test.
+
+2017-07-05  Bin Cheng  <bin.cheng@arm.com>
+
 	* gcc.dg/tree-ssa/ldist-6.c: XFAIL.
 
 2017-07-04  Uros Bizjak  <ubizjak@gmail.com>
